#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([HEAAN], [1.0])
AM_INIT_AUTOMAKE([subdir-objects])

LT_INIT

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_CHECK_FUNCS([floor gettimeofday pow sqrt])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
                 HEAAN/Makefile HEAAN/run/Makefile HEAAN/src/Makefile])
AC_OUTPUT
