
lib_LTLIBRARIES = libHEAAN.la
libHEAAN_ladir = $(includedir)
libHEAAN_la_HEADERS = Ciphertext.h Common.h Context.h EvaluatorUtils.h Key.h \
						NumUtils.h Plaintext.h Ring2Utils.h Scheme.h SchemeAlgo.h \
						SecretKey.h SerializationUtils.h StringUtils.h TimeUtils.h
libHEAAN_la_SOURCES = Ciphertext.cpp Context.cpp EvaluatorUtils.cpp Key.cpp \
						NumUtils.cpp Plaintext.cpp Ring2Utils.cpp Scheme.cpp \
						SchemeAlgo.cpp SecretKey.cpp SerializationUtils.cpp \
						StringUtils.cpp TimeUtils.cpp
libHEAAN_la_CFLAGS =
libHEAAN_la_CPPFLAGS = -fPIC
libHEAAN_la_CXXFLAGS = -fPIC -std=c++11
libHEAAN_la_LDFLAGS = -static
libHEAAN_la_LIBADD =
